--- a/server/MovieScore.Api/MovieScore.Api.csproj
+++ b/server/MovieScore.Api/MovieScore.Api.csproj
@@ -4,5 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MovieScore.Core\MovieScore.Core.csproj" />
+    <ProjectReference Include="..\MovieScore.Infrastructure\MovieScore.Infrastructure.csproj" />
+  </ItemGroup>
+
 
 </Project>
