--- a/server/MovieScore.Core/MovieScore.Core.csproj
+++ b/server/MovieScore.Core/MovieScore.Core.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="DTOs\" />
+    <Folder Include="Enumerations\" />
+    <Folder Include="Exceptions\" />
+  </ItemGroup>
+
 </Project>
