--- a/server/MovieScore.Core/MovieScore.Core.csproj
+++ b/server/MovieScore.Core/MovieScore.Core.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Exceptions\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
+  </ItemGroup>
+
 </Project>
